# Distributed_KV_Store

./: CMakeLists.txt  run_cluster.sh
config/: cluster.json
proto/: kv_service.proto
scripts/: run_cluster.sh  run_node.sh
src/: main.cpp
src/api/: KVServer.cpp  KVServer.h
src/client/: main.cpp
src/consensus/: BraftNode.cpp  BraftNode.h
src/coordinator/: SystemCoordinator.cpp  SystemCoordinator.h
src/snapshot/: SnapshotManager.cpp  SnapshotManager.h
src/state/: KeyValueStateMachine.cpp  KeyValueStateMachine.h
src/storage/: StorageEngine.cpp  StorageEngine.h
src/transport/: PeerTransport.cpp  PeerTransport.h
